# Morpion

./: CMakeLists.txt  Makefile  Makefile_complet  Makefile_old  Makefile_test  _Makefile  board.c  board.h  board_view_text.c  game.c  game.h  main.c  player_manager_mock.c  player_manager_scanf.c  tictactoe_errors.h
src/: board.c  board_view_sdl.c  checkEndOfGame.c  checkEndOfGame.h  game.h  player_manager.h  player_manager_sdl.c
